Partially fix background-circle overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 }
 
 section {
+  position: relative;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
@@ -47,6 +48,10 @@ h1 {
   text-align: right;
   max-width: 90%;
   margin-left: auto;
+}
+
+#hero {
+  overflow: hidden;
 }
 
 .hero-bottom {
@@ -104,8 +109,7 @@ nav > * {
 }
 
 #background-circle {
-  z-index: -1000;
-  background-color: rgba(0,0,0,0.2);
+  z-index: -100;
   background-color: #AFD8F2;
   width: 120vh;
   height: 120vh;
@@ -114,6 +118,16 @@ nav > * {
   top: -10vh;
   left: 50vh;
   margin: 0 auto;
+  margin-right: 10px;
+  padding-right: 50px;
+}
+
+#circle-container {
+  position: relative;
+}
+
+#circle-container > div {
+  overflow-x: hidden;
 }
 
 #contact > * {
